@@ -1,3 +1,8 @@
+Thu Apr 02 17:25:33 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/highlight.py: Avoid parsing the query into terms repeatedly
+	  when highlight is called for multiple fields with the same query.
+
 Thu Apr 02 15:47:31 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/searchconnection.py: Implement the allow and deny
